# dvv

./: .gitignore  LICENSE  README.md  changelog.md  dvv.cabal  fourmolu.yaml
.github/workflows/: haskell.yml
src/Data/: DVV.hs
test/: Spec.hs
