cabal-version:      3.0
name:               dvv
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
copyright:          2026-Present, James R. Thompson
maintainer:         James R. Thompson <jamesthompsonoxford@gmail.com>
author:             James R. Thompson
synopsis:           Dotted Version Vectors (DVV)
homepage:           https://github.com/jamesthompson/dvv
description:
    Dotted Version Vectors (DVV) provide a mechanism for tracking causality
    and detecting conflicts in distributed systems. This implementation supports
    efficient synchronization, event recording, and conflict resolution.

category:           Data
build-type:         Simple
extra-source-files: README.md fourmolu.yaml Setup.hs changelog.md

source-repository head
  type: git
  location: https://github.com/jamesthompson/dvv.git

library
    exposed-modules:  Data.DVV
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wredundant-constraints
        -Wnoncanonical-monad-instances -Wmissing-export-lists
        -Wpartial-fields -Wmissing-deriving-strategies -fwrite-ide-info
        -hiedir=.hie

    build-depends:
        base >=4.14 && <5,
        unordered-containers >=0.2.0.0 && <0.3,
        hashable >=1.4.0.0 && <1.6,
        lattices >=2.0 && <2.3

test-suite dvv-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wredundant-constraints
        -Wnoncanonical-monad-instances -Wmissing-export-lists
        -Wpartial-fields -Wmissing-deriving-strategies -fwrite-ide-info
        -hiedir=.hie

    build-depends:
        base >=4.14 && <5,
        dvv,
        hspec,
        QuickCheck,
        unordered-containers,
        hashable,
        lattices
